@@ -1,3 +1,8 @@
+2013/10/23
+
+- Start/Stop buttons no longer reset current project.
+
+
 2013/10/18
 
 - Start/Stop button no longer closes the properties dialog.
